2016-07-26	Tweaks.  (2)

		configure ,
		GNUmakefile :
		- host-side C++ variadic template support is now mandatory;
		  so bin/innocent-pear-doge can always be built

		lolwutconf/ :
		- bumped to 3e5b959d52

2016-07-24	"No output has been received in the last 10m0s, this
		potentially indicates a stalled build or something wrong
		with the build itself."

		share/innocent-pear/doge-1.cc :
		- now calls rofl<...>::tcflow(, TCOOFF) on a (compile-time)
		  random fd, not always stdout

		share/innocent-pear/doge-3.cc :
		- bug fix: now calls rofl<...>::tcflow(, TCOON) on stdin and
		  stderr as well

		include/innocent-pear/rofl.h :
		- rofl<...>::ioctl(fd, ...) now also scrambles fd if known to
		  be constant
		- rofl<...>::tcflow(fd, .) no longer scrambles fd if handing
		  over to ioctl(...) :-)

2016-07-23	Beginning of clang++ support.

		configure :
		- now tests if host and target compilers support
		  `-fno-integrated-as', and if target supports `-wrapper'
		- libbfd is now obligatory

		bin/innocent-pear-c++.cc :
		- .ccc -> .cc
		- now supports sending compiler passes to calm.cc via using
		  `-###' rather than `-wrapper'
		- removed `-specs ...'
		- some bug fixes

		bin/innocent-pear-doge.cc :
		- .ccc -> .cc
		- now #define's innocent_pear_HOST_SIDE

		share/innocent-pear/doge-1.cc ,
		share/innocent-pear/doge-3.cc ,
		share/innocent-pear/doge-8.cc ,
		share/innocent-pear/epic.cc ,
		test/*.cc :
		- .ccc -> .cc

		GNUmakefile :
		- .ccc -> .cc
		- now writes results of `-wrapper' test to
		- now adds `-fno-integrated-as' compiler flag when building
		  .s files (host or target), if this flag is supported
		- removed checks for libbfd

		.travis.yml :
		- now also tests with clang++ as host-side compiler, and as
		  target-side compiler for default processor type (x86-64)
		  and x86-32

		share/innocent-pear/keyboard.cc :
		- added two more parameters to keyboard(...) and
		  keyboardest(...)
		- removed keyboard(, )