@@ -1,3 +1,15 @@
+2016-07-28	Tweaks.  (3)
+
+		configure ,
+		GNUmakefile ,
+		include/innocent-pear/dawg.h ,
+		include/innocent-pear/kthxbai.h :
+		- target-side C++ variadic template support is now also
+		  mandatory
+
+		lolwutconf/ :
+		- bumped to 01f15b32fc
+
 2016-07-26	Tweaks.  (2)
 
 		configure ,
